--- a/style.css
+++ b/style.css
@@ -51,6 +51,8 @@ nav li:first-child {
 
 .profilePic {
     margin-left: 7vh;
+    display: flex;
+    align-items: center;
     width: 30vh;
     height: 30vh;
     border-radius: 50%;
@@ -80,5 +82,9 @@ p {
     padding: 30rem 0 10rem 0;
     justify-content: center;
     align-items: center;
+}
+
+#email, #linkedIn {
+    color: white;
 }
 
